# dynamic-uav-path-planning

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
configs/: corridor_dash.yaml  corridor_dash_1h.yaml  curriculum_goal_first.yaml  curriculum_goal_first_v2.yaml  curriculum_goal_first_v3.yaml  curriculum_goal_first_v4.yaml  curriculum_goal_first_v5.yaml  curriculum_goal_first_v6.yaml  debug.yaml  default.yaml  default_curriculum.yml  default_curriculum_bypass.yaml  default_curriculum_bypass_v2.yaml  default_curriculum_bypass_v3.yaml  default_post_commit.yaml  easy_train.yaml  hard_obstacles.yaml  post_commit_target.yaml  post_commit_target_v10.yaml  post_commit_target_v11.yaml  post_commit_target_v12.yaml  post_commit_target_v13.yaml  post_commit_target_v14.yaml  post_commit_target_v15.yaml  post_commit_target_v2.yaml  post_commit_target_v3.yaml  post_commit_target_v4.yaml  post_commit_target_v5.yaml  post_commit_target_v6.yaml  post_commit_target_v7.yaml  post_commit_target_v8.yaml  post_commit_target_v9.yaml  post_corridor_target.yaml  post_corridor_target_v2.yaml  post_corridor_target_v2_continue.yaml
results/: v3_diagnostics.json
scripts/: _common.py  diagnose_v3.py  evaluate.py  generate_stage_showcase.py  plot_results.py  render_first_eval_episode.py  smoke_test.py  train.py
src/: __init__.py
tests/: conftest.py  test_agent.py  test_base_env.py  test_buffers_and_tensor_ops.py  test_config.py  test_encoders_and_policy.py  test_environment.py  test_environment_helpers.py  test_io_and_visualization.py  test_metrics.py  test_training.py  (+2 more)
(+866 files in other folders)
